--- a/client/html/welcome.html
+++ b/client/html/welcome.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>欢迎</title>
+	<title>Bootstrap 实例 - 图像</title>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<!-- 新 Bootstrap5 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
@@ -10,15 +10,11 @@
 	<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 	<!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
-
-	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
-
-
-	<link rel="stylesheet" href="./src/assets/base.css" >
-	<link rel="stylesheet" href="./src/assets/main.css" >
+    <link rel="stylesheet" href="/stylesheets/base.css" >
 </head>
-<body>
-    <div class="container" id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+<body class="c-welcome-bg-img">
+    <div class="container">
+        <a href="/login"> <span class="badge pull-right c-welcome-badge"> 跳 过 </span> </a>
+    </div>
 </body>
 </html>
