--- a/client/index.html
+++ b/client/index.html
@@ -10,15 +10,14 @@
 	<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 	<!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
-
+	<!-- font awesome 图标库引用 JavaScript 文件-->
 	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 
+	<link rel="stylesheet" href="./src/assets/css/base.css" >
+	<link rel="stylesheet" href="./src/assets/css/main.css" >
 
-	<link rel="stylesheet" href="./src/assets/base.css" >
-	<link rel="stylesheet" href="./src/assets/main.css" >
 </head>
-<body>
-    <div class="container" id="app"></div>
+<body id="app" class="c-welcome-badge">
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
