--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>欢迎</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<!-- 新 Bootstrap5 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
@@ -13,11 +14,8 @@
 	<!-- font awesome 图标库引用 JavaScript 文件-->
 	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 
-	<link rel="stylesheet" href="./src/assets/css/base.css" >
-	<link rel="stylesheet" href="./src/assets/css/main.css" >
-
 </head>
-<body id="app" class="c-welcome-badge">
+<body id="app" style="padding: 0%;">
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
